个人中心提交(建明提交）

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -200,6 +200,7 @@ ul li {
 .mt20{margin-top: 20px;}
 .p10{padding: 10px;}
 .tc{text-align: center;}
+.mt30{margin-top:30px;}
 .mt55{margin-top: 55px;}
 .ml20{margin-left: 20px;}
 .ml10{margin-left: 10px;}
